openshift/disallow-jenkins-pipeline-strategy/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-policy
policies:
- ../disallow-jenkins-pipeline-strategy.yaml
resources:
- resources.yaml
results:
- kind: BuildConfig
  policy: disallow-jenkins-pipeline-strategy
  resources:
  - sample-jenkins-pipeline
  - sample-jenkins-pipeline-new
  result: fail
  rule: check-build-strategy
- kind: BuildConfig
  policy: disallow-jenkins-pipeline-strategy
  resources:
  - sample-pipeline-no-jenkins
  - sample-pipeline-no-jenkins-new
  result: pass
  rule: check-build-strategy
